--- a/UserRoles/Views/Order/CusIndex.cshtml
+++ b/UserRoles/Views/Order/CusIndex.cshtml
@@ -6,6 +6,14 @@
     ViewBag.Title = "CusIndex";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+    <head>
+
+
+        <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+        <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+    </head>
 <br />
 <br />
 <br />
@@ -14,83 +22,89 @@
 <br />
 <br />
 <br />
-<h2>My Orders</h2>
+<h2 style="font-family:Roboto">My Orders</h2>
 
 @*<p>
         @Html.ActionLink("Create New", "Create")
     </p>*@
-<form asp-controller="Order" asp-action="CusIndex">
+<form asp-controller="Order" asp-action="CusIndex" class="form-inline mx-auto search-form">
 
 
     <p>You may search by Order ID</p>
-    <input type="text" name="SearchString" />
-    <input type="submit" value="Filter" />
+    <input  class="form-control mr-sm-2" aria-label="SearchString" type="text" name="SearchString" />
+    <input class="btn btn-style my-2 my-sm-0" type="submit" value="Filter" />
 
 
 
 </form>
-<table class="table table-hover">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.First().OrderID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().OrderDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().PaymentType)
-        </th>
-       
-        <th>
-            @Html.DisplayNameFor(model => model.First().CustomerName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().Surname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().CustomerPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().Email)
-        </th>
-      
-        <th></th>
-    </tr>
+<body>
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.First().OrderID)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.First().OrderDate)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.First().PaymentType)
+                    </th>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PaymentType)
-            </td>
-           
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerPhone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-           
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.OrderID }) |*@
-                @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
-                @*@Html.ActionLink("Delete", "Delete", new { id = item.OrderID })*@
-            </td>
-        </tr>
-    }
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.First().CustomerName)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.First().Surname)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.First().CustomerPhone)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.First().Email)
+                    </th>
 
-</table>
+                    <th></th>
+                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PaymentType)
+                        </td>
+
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Surname)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerPhone)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+
+                        <td>
+                            @*@Html.ActionLink("Edit", "Edit", new { id = item.OrderID }) |*@
+                            @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
+                            @*@Html.ActionLink("Delete", "Delete", new { id = item.OrderID })*@
+                        </td>
+                    </tr>
+                }
+
+        </table>
+    </div>
+</body>
 @Html.PagedListPager(Model, page => Url.Action("CusIndex", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
   new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation = true, DisplayItemSliceAndTotal = true })
