--- a/UserRoles/Views/Order/Details.cshtml
+++ b/UserRoles/Views/Order/Details.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
+<head>
+
+
+    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+    <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+</head>
 <br />
 <br />
 <br />
@@ -12,11 +20,11 @@
 <br />
 <br />
 <br />
-<h2>Order Details</h2>
+<h2 style="font-family:Roboto">Order Details</h2>
 @*<p>@Html.ActionLink("Export Order Listing", "ExportingOrderListing")</p>
-<p>@Html.ActionLink("Export Order", "DetailsReport")</p>*@
+    <p>@Html.ActionLink("Export Order", "DetailsReport")</p>*@
 <div>
-    <h4>Order: @Html.DisplayFor(model => model.OrderID) </h4>
+    <h4 style="font-family:Roboto">Order: @Html.DisplayFor(model => model.OrderID) </h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -92,52 +100,58 @@
 
     </dl>
 </div>
-<table class="table">
-    <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Sub Total</th>
-    </tr>
-    @foreach (var item in Model.OrderDetail)
-    {
-        <tr>
-            <td>@item.ItemsHire.ProductName</td>
 
-            <td>@item.ItemsHire.Price.ToString("C")</td>
-            <td>@item.Quantity</td>
-            <td>@(( item.Quantity * item.ItemsHire.Price).ToString("C"))</td>
-        </tr>
+<body>
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Sub Total</th>
+                </tr>
+                @foreach (var item in Model.OrderDetail)
+                {
+                    <tr>
+                        <td>@item.ItemsHire.ProductName</td>
 
-        <tr>
-            <td colspan="3">Deposit:</td>
-            <td>
+                        <td>@item.ItemsHire.Price.ToString("C")</td>
+                        <td>@item.Quantity</td>
+                        <td>@(( item.Quantity * item.ItemsHire.Price).ToString("C"))</td>
+                    </tr>
 
-                @item.Deposit.ToString("C")
-            </td>
-        </tr>
-        <tr>
-            <td colspan="3">Total:</td>
-            <td>
+                    <tr>
+                        <td colspan="3">Deposit:</td>
+                        <td>
 
-                @item.Total.ToString("C")
-            </td>
-        </tr>
+                            @item.Deposit.ToString("C")
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">Total:</td>
+                        <td>
 
-
-
-        @*<tr>
-                <td>@item.ItemsHire.ProductName</td>
-                <td>@item.Quantity</td>
-                <td>@item.Price.ToString("C")</td>
-                <td>@item.Total.ToString("C")</td>
-                <td>@item.Deposit.ToString("C")</td>
+                            @item.Total.ToString("C")
+                        </td>
+                    </tr>
 
 
-            </tr>*@
-    }
-</table>
 
+                    @*<tr>
+                            <td>@item.ItemsHire.ProductName</td>
+                            <td>@item.Quantity</td>
+                            <td>@item.Price.ToString("C")</td>
+                            <td>@item.Total.ToString("C")</td>
+                            <td>@item.Deposit.ToString("C")</td>
+
+
+                        </tr>*@
+                }
+        </table>
+    </div>
+</body>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.OrderID }) |
     @Html.ActionLink("Back to List", "Index")
