--- a/UserRoles/Views/Order/Index.cshtml
+++ b/UserRoles/Views/Order/Index.cshtml
@@ -6,6 +6,14 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
+    <head>
+
+
+        <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+        <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+    </head>
 <br />
 <br />
 <br />
@@ -14,86 +22,91 @@
 <br />
 <br />
 <br />
-<h2>New Orders</h2>
+<h2 style="font-family:Roboto">New Orders</h2>
 
 
 
-<form asp-controller="Order" asp-action="Index">
+<form asp-controller="Order" asp-action="Index" class="form-inline mx-auto search-form">
 
 
     <p>You may search by Order ID</p>
-    <input type="text" name="SearchString" />
-    <input type="submit" value="Filter" />
+    <input class="form-control mr-sm-2" aria-label="SearchString" type="text" name="SearchString" />
+    <input class="btn btn-style my-2 my-sm-0" type="submit" value="Filter" />
 
 
 
 </form>
+<body>
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">
+                        Order ID
+                    </th>
+                    <th scope="col">
+                        Order Date
+                    </th>
+                    <th scope="col">
+                        Payment Type
+                    </th>
 
-<table class="table">
-    <tr>
-        <th>
-                Order ID
-            </th>
-        <th>
-            Order Date
-        </th>
-        <th>
-            Payment Type
-        </th>
-       
-        <th>
-            Customer Name
-        </th>
-        <th>
-            Customer Surname
-        </th>
-        <th>
-            Customer Phone
-        </th>
-        <th>
-            Email
-        </th>
-       
-        <th></th>
-    </tr>
+                    <th scope="col">
+                        Customer Name
+                    </th>
+                    <th scope="col">
+                        Customer Surname
+                    </th>
+                    <th scope="col">
+                        Customer Phone
+                    </th>
+                    <th scope="col">
+                        Email
+                    </th>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                    @Html.DisplayFor(modelItem => item.OrderID)
-                </td>
-            <td>
-               @Html.DisplayFor(modelItem => item.OrderDate)
-                @*@, @item.OrderDate)*@
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PaymentType)
-            </td>
-           
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerPhone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-           
-            <td>
+                    <th></th>
+                </tr>
 
-                @*@Html.ActionLink("Details", "Details", new { id = item.OrderID }) |*@
-                @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderDate)
+                            @*@, @item.OrderDate)*@
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PaymentType)
+                        </td>
+
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Surname)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CustomerPhone)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+
+                        <td>
+
+                            @*@Html.ActionLink("Details", "Details", new { id = item.OrderID }) |*@
+                            @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
 
 
-            </td>
-        </tr>
-    }
+                        </td>
+                    </tr>
+                }
 
-</table>
+        </table>
+    </div>
+</body>
 @Html.PagedListPager(Model, page => Url.Action("Index", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
   new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation = true, DisplayItemSliceAndTotal = true })
