--- a/UserRoles/Views/Order/UpComingEvents.cshtml
+++ b/UserRoles/Views/Order/UpComingEvents.cshtml
@@ -4,81 +4,94 @@
     ViewBag.Title = "UpComingEvents";
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<h2>UpComingEvents</h2>
+    <head>
 
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Location.hallName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CEmail)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Cell)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        <th></th>
-    </tr>
+        <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location.hallName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CEmail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cell)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "EventEdit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "EventDetails", new { id = item.ID }) |
-                @*@Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
-            </td>
-        </tr>
-    }
+        <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
 
-</table>
+    </head>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<h2 style="font-family:Roboto">UpComingEvents</h2>
+
+<body>
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.ID)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Location.hallName)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Quantity)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.CEmail)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.FName)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.LName)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Cell)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Date)
+                    </th>
+                    <th></th>
+                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Location.hallName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Quantity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CEmail)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Cell)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Date)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "EventEdit", new { id = item.ID }) |
+                            @Html.ActionLink("Details", "EventDetails", new { id = item.ID }) |
+                            @*@Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
+                        </td>
+                    </tr>
+                }
+
+        </table>
+    </div>
+</body>
