--- a/UserRoles/Views/Packages/CusIndex.cshtml
+++ b/UserRoles/Views/Packages/CusIndex.cshtml
@@ -6,6 +6,14 @@
     ViewBag.Title = "CusIndex";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+    <head>
+
+
+        <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+        <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+
+    </head>
 <br />
 <br />
 <br />
@@ -13,7 +21,7 @@
 <br />
 <br />
 <br />
-<h2>Packages</h2>
+<h2 style="font-family:Roboto">Packages</h2>
 
 
 <font color="Black">
@@ -73,13 +81,13 @@
         ViewBag.Title = "ItemHire";
     }
     <br />
-    <form asp-controller="Packages" asp-action="CusIndex">
+    <form asp-controller="Packages" asp-action="CusIndex" class="form-inline mx-auto search-form">
         <!--To change -->
 
 
         <p>You may search by Category</p>
-        <input type="text" name="SearchString" />
-        <input type="submit" value="Filter" />
+        <input  class="form-control mr-sm-2" aria-label="SearchString" type="text" name="SearchString" />
+        <input class="btn btn-style my-2 my-sm-0" type="submit" value="Filter" />
 
 
 
