--- a/UserRoles/Views/Account/Details.cshtml
+++ b/UserRoles/Views/Account/Details.cshtml
@@ -76,7 +76,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("RegisterRole", "RegisterRole", new { id = item.Id }) |
+    @Html.ActionLink("RegisterRole", "RegisterRole", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
 <br />
