--- a/UserRoles/Views/Account/Remove.cshtml
+++ b/UserRoles/Views/Account/Remove.cshtml
@@ -42,12 +42,14 @@
     <!--ends here-->
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn-default" value="Register" />
+            <input type="submit" class="btn-default" value="Remove" />
             @*@Html.ActionLink("Remove", "Remove", "Account")*@
 
         </div>
     </div>
-
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
