--- a/UserRoles/tables/css/style.css
+++ b/UserRoles/tables/css/style.css
@@ -10,7 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 html,
 body {
 	margin: 0;
-	font-size: 15px;
+	font-size: 14px;
 	font-family: 'Roboto', sans-serif;
 	background: #fff;
 }
@@ -44,7 +44,7 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	font-family: 'Poiret One', cursive;
+	font-family: 'Roboto', cursive;
 	font-weight: 700;
 }
 
@@ -160,7 +160,7 @@ h4.tittle-w3-agileits {
 	background: none;
 	border: none;
 	border-bottom: 1px solid #eee;
-	font-size: 15px;
+	font-size: 14px;
 	letter-spacing: 1px;
 	border-radius: 0px;
 }
@@ -217,7 +217,7 @@ ul.top-icons-agileits-w3layouts a.nav-link i {
 }
 
 .notif-content-wthree h6 {
-	font-size: 15px;
+	font-size: 14px;
 	color: #909090;
 	letter-spacing: 1px;
 }
@@ -447,7 +447,7 @@ ul.top-icons-agileits-w3layouts a.nav-link i {
 }
 
 .text h2 {
-	margin: 15px 0 10px 0;
+	margin: 14px 0 10px 0;
 	font-size: 27px;
 	color: #fff;
 	letter-spacing: 3px;
@@ -470,7 +470,7 @@ ul.top-icons-agileits-w3layouts a.nav-link i {
 
 .f-left a {
 	display: block;
-	padding: 15px 0;
+	padding: 14px 0;
 }
 
 .f-left {
@@ -660,7 +660,7 @@ ul.icon-navigation li a {
 
 .progress .bar {
 	z-index: 2;
-	height: 15px;
+	height: 14px;
 	font-size: 12px;
 	color: white;
 	text-align: center;
@@ -1073,7 +1073,7 @@ section.pricing-tables h5.card-title {
 	color: #ffffff;
 	background-color: #5978f6;
 	border-color: rgba(255, 255, 255, 0.30);
-	font-size: 15px;
+	font-size: 14px;
 	letter-spacing: 1.5px;
 }
 
@@ -1172,7 +1172,7 @@ a.btn.more {
 
 .table th {
 	color: #252525;
-	font-size: 15px;
+	font-size: 14px;
 }
 
 .table-responsive {
@@ -1294,7 +1294,7 @@ h1.paragraph-agileits-w3layouts a:hover {
 	width: 70%;
 	background: rgba(76, 110, 245, 0.27);
 	border: none;
-	font-size: 15px;
+	font-size: 14px;
 	letter-spacing: 0.8px;
 	color: #000;
 	padding: 8px 15px;
@@ -1354,7 +1354,7 @@ h1.paragraph-agileits-w3layouts a:hover {
 	width: 100%;
 	padding: 0.7em 1em;
 	margin: .5em 0em 1.5em;
-	font-size: 15px;
+	font-size: 14px;
 	letter-spacing: 1px;
 	text-align: center;
 	color: #292929;
