--- a/UserRoles/Views/Meetings/CusMeetIndex.cshtml
+++ b/UserRoles/Views/Meetings/CusMeetIndex.cshtml
@@ -16,7 +16,7 @@
     <!-- //Meta Tags -->
     <!-- Style-sheets -->
     <!-- Bootstrap Css -->
-    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <link href="/tables/css/bootstrap.css" rel="stylesheet" type="css" @*media="all"*@ />
     <!-- Bootstrap Css -->
     <!-- Common Css -->
     <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
