--- a/UserRoles/Views/Order/CusEvents.cshtml
+++ b/UserRoles/Views/Order/CusEvents.cshtml
@@ -10,7 +10,7 @@
 <head>
 
 
-    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <link href="/tables/css/bootstrap.css" rel="stylesheet" type="css" @*media="all"*@ />
 
     <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
 
