--- a/UserRoles/Views/ProductTypes/Index.cshtml
+++ b/UserRoles/Views/ProductTypes/Index.cshtml
@@ -7,7 +7,7 @@
 <head>
 
 
-    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <link href="/tables/css/bootstrap.css" rel="stylesheet" type="text" @*media="all"*@ />
 
     <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
 
