--- a/UserRoles/Views/Shared/_AdminNavbar.cshtml
+++ b/UserRoles/Views/Shared/_AdminNavbar.cshtml
@@ -119,7 +119,7 @@
                             <ul class="dropdown-menu">
 
 
-
+                                <li><a class="hvr-sweep-to-right" href="/Home/Camera">Scanner</a></li>
                                 <li><a class="hvr-sweep-to-right" href="/Order/AdminIndex">All Orders</a></li>
                                 <li><a class="hvr-sweep-to-right" href="/Order/Index">New Orders</a></li>
                                 <li><a class="hvr-sweep-to-right" href="/Order/Seen">Seen</a></li>
