--- a/UserRoles/Views/ItemsHires/Index.cshtml
+++ b/UserRoles/Views/ItemsHires/Index.cshtml
@@ -34,7 +34,7 @@
     <!-- //Meta Tags -->
     <!-- Style-sheets -->
     <!-- Bootstrap Css -->
-    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+    <link href="/tables/css/bootstrap.css" rel="stylesheet" type="text" @*media="all"*@ />
     <!-- Bootstrap Css -->
     <!-- Common Css -->
     <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
