--- a/UserRoles/Views/ItemsHires/ItemsInventory.cshtml
+++ b/UserRoles/Views/ItemsHires/ItemsInventory.cshtml
@@ -18,7 +18,7 @@
     <title>Free Smart Store Website Template | Home :: w3layouts</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="/ItemsPage/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/ItemsPage/css/style.css" rel="stylesheet" type="css" media="all" />
     <link href="/ItemsPage/css/menu.css" rel="stylesheet" type="text/css" media="all" />
     <script src="/ItemsPage/js/jquery.min.js"></script>
     <script src="/ItemsPage/js/script.js" type="text/javascript"></script>
