--- a/UserRoles/Views/Order/AdminIndex.cshtml
+++ b/UserRoles/Views/Order/AdminIndex.cshtml
@@ -6,19 +6,17 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
-<<<<<<< HEAD
+
     <head>
 
       
-        <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" @*media="all"*@ />
+        <link href="/tables/css/bootstrap.css" rel="stylesheet" type="text" @*media="all"*@ />
        
         <link href="/tables/css/style.css" rel="stylesheet" type="text/css" @*media="all"*@ />
 
     </head>
 
 
-=======
->>>>>>> 6b01de52c3f95b734161f70ee685fb870929b197
 
 <br />
 <br />
@@ -118,77 +116,7 @@
         </div>
 </body>
 
-<<<<<<< HEAD
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
-=======
-    <table class="table">
-        <tr>
-            <th>
-                Order ID
-            </th>
-            <th>
-                Order Date
-            </th>
-            <th>
-                Payment Type
-            </th>
-
-            <th>
-                Customer Name
-            </th>
-            <th>
-                Customer Surname
-            </th>
-            <th>
-                Customer Phone
-            </th>
-            <th>
-                Email
-            </th>
-
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OrderID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OrderDate)
-                    @*@, @item.OrderDate)*@
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PaymentType)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.CustomerName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Surname)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CustomerPhone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-
-                <td>
-
-                    @*@Html.ActionLink("Details", "Details", new { id = item.OrderID }) |*@
-                    @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
-
-
-                </td>
-            </tr>
-        }
-
-    </table>
-
-
+   
 @Html.PagedListPager(Model, page => Url.Action("AdminIndex", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
->>>>>>> 6b01de52c3f95b734161f70ee685fb870929b197
+
   new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation = true, DisplayItemSliceAndTotal = true })
