--- a/UserRoles/Views/Order/CusDetails.cshtml
+++ b/UserRoles/Views/Order/CusDetails.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "CusDetails";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 
 
 }
@@ -223,7 +223,8 @@
                 <td>
                     @Model.CustomerName @Model.Surname<br />
                     @Model.CustomerPhone<br />
-                    @Model.Email
+                    @Model.Email<br >
+                    @Model.Address
                 </td>
 
                 <td>
