--- a/UserRoles/Views/Reviews/Index.cshtml
+++ b/UserRoles/Views/Reviews/Index.cshtml
@@ -100,10 +100,10 @@
         </div>
     </body>
 
-        <div>
+        @*<div>
             <img src="@Url.Action("ChartPie")" alt="Chart" />
 
-        </div>
+        </div>*@
         <br />
         <br />
         <br />
